Refactor entity classes and improve code structure
- Updated Tables.java to use Lombok annotations for getters, setters, and constructors; added indexes to the table definition.
- Refactored User.java to use Lombok annotations, changed date fields to Instant, and improved the user creation and update logic with pre-persist and pre-update methods.
- Changed LoginRequest and LoginResponse to use Java records for simplicity.
- Refactored LoginController to use constructor injection with Lombok's @RequiredArgsConstructor and improved error handling during authentication.
- Simplified SpringBootController by using constructor injection and improved logging and endpoint structure.
- Refactored AppInit to streamline user creation logic and utilize Instant for date handling.
- Updated MainTest to improve host resolution logic and error handling.
- Enhanced OpenApiConfig for better readability and structure.
- Improved JwtAuthenticationEntryPoint to return JSON error responses.
- Refactored JwtRequestFilter for better readability and error handling.
- Updated JwtUserDetailsService to use constructor injection and improved user loading logic.
- Modified ApplicationRole and UserStatus enums to implement GrantedAuthority and add utility methods.
- Changed UserRepository to return Optional for email lookups.
- Updated log4j2.xml for improved logging configuration and file management.